[package]
name = "server"
version = "0.1.0"
authors = ["F4r3n <guillaume_k@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
dns-lookup = "1.0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["serve"]